[ CUSTOM-SELECT ] fix in z-index

--- a/src/styles/layout/custom-select/_styling.scss
+++ b/src/styles/layout/custom-select/_styling.scss
@@ -4,6 +4,7 @@
   min-width: 64px;
   position: relative;
   user-select: none;
+  z-index: 25;
 
   &.active &{
 
